--- a/css/main.css
+++ b/css/main.css
@@ -1,94 +1,134 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
 .month {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    
 }
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
-
-
-.day{
+.day {
     display: grid;
-    height:145px;
+    height: 145px;
     width: 100%;
-    border: 1px solid gray;
-    border-right:none;
-    border-top:none;
+    border-right: none;
+    border-top: none;
     cursor: pointer;
-    overflow-x: hidden;
-    overflow-y:scroll;
-}
-
-.day:last-child{
-    border-right:1px solid gray;
-}
-
-.day:nth-child(7n){
-    border-right:1px solid gray;
+    justify-content: end;
 }
 
 .day-number {
-    justify-content: end;
-    display: grid;
     margin: 5px;
+    height: 20px;
+    width: 23px;
+    text-align: center;
+    border-radius: 50%;
+    transition: 0.3s
 }
-.month-tittle{    
-    font-family : 'Roboto', sans-serif;
+
+.day:hover .day-number{
+    margin: 5px;
+    height: 20px;
+    width: 23px;
+    background: rgb(202, 66, 66);
+    color: #ffffff;
+}
+
+#month-tittle {
+    font-family: 'Roboto', sans-serif;
     font-size: 25px;
-    font-weight:100 !important;}
+    font-weight: 100 !important;
+}
 
 ul#monsun {
-    border: 0.7px solid gray;
+    border: 1px solid blueviolet;
     color: aliceblue;
     width: 100%;
     background-color: blueviolet;
     text-decoration: none;
-    margin: 0; /* Обнуляем значение отступов */
-    padding: 0; 
+    margin: 0;
+    padding: 0;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-gap: 10px;/* Значение полей */
+    grid-gap: 10px;
 }
+
 ul#monsun li {
     justify-content: center;
     display: grid;
     margin: 5px;
 }
 
-.taskModal{
+.taskModal {
     display: none;
     position: fixed;
     z-index: 1;
     left: 0;
-    top:0;
+    top: 0;
     height: 100%;
     width: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.5);
-
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.taskModalContent{
+.taskModalContent {
     background-color: #f4f4f4;
     margin: 20% auto;
     padding: 20px;
     width: 50%;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
+    animation-name: modalshow;
+    animation-duration: 1s; 
 }
 
-#closeModalBtn{
+@keyframes modalshow{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+#closeModalBtn {
     padding: 0;
     margin: 0;
     color: blueviolet;
     font-size: 20px;
 }
 
-#closeModalBtn:hover,#closeModalBtn:focus{
+#closeModalBtn:hover,
+#closeModalBtn:focus {
     color: red;
     text-decoration: none;
     cursor: pointer;
 }
 
-.taskModal .open{
+.taskModal .open {
     display: none;
+}
+
+.tooltip {
+    position: absolute;
+    width: 15%;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    border: 1px solid black;
+    transition-delay: 0.3s
+}
+
+.btn-group span {
+    background-color: rgb(125, 50, 202);
+    border: 1px solid rgb(87, 0, 128);
+    color: white;
+    padding: 5px 20px; 
+    cursor: pointer; 
+    float: right; 
+}
+
+.btn-group span:not(:last-child) {
+    border-left: none; 
+}
+
+#prevMonth:active,
+#nextMonth:active{
+    box-shadow: 0 0 3px gray;
 }
